@@ -4,6 +4,9 @@ Changelog
 0.8.0 (?)
 ---------
 
+* New functions and classes:
+  - npy_util.prune_mask
+
 
 0.7.0 (2022-10-17)
 ------------------
